// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when fetching secrets loading spinner matches the snapshot 1`] = `
<tr
  className="flex"
>
  <td
    className="col-3"
  />
  <td
    className="col-9"
  >
    <LoadingWrapper
      loaded={false}
      type={1}
    />
  </td>
</tr>
`;

exports[`when fetching secrets loading spinner matches the snapshot 2`] = `
<tr
  className="flex"
>
  <td
    className="col-3"
  />
  <td
    className="col-9"
  >
    <LoadingWrapper
      loaded={false}
      type={1}
    />
  </td>
</tr>
`;

exports[`when there is a valid Secret renders the Secret name and type 1`] = `
<tr
  className="flex"
>
  <td
    className="col-3"
  >
    foo
  </td>
  <td
    className="col-2"
  >
    Opaque
  </td>
  <td
    className="col-7 padding-small"
  >
    <SecretItemDatum
      key="foo/foo"
      name="foo"
      value="YmFy"
    />
    <SecretItemDatum
      key="foo/foo2"
      name="foo2"
      value="YmFyMg=="
    />
  </td>
</tr>
`;

exports[`when there is an empty Secret displays a message 1`] = `
<tr
  className="flex"
>
  <td
    className="col-3"
  >
    foo
  </td>
  <td
    className="col-2"
  >
    Opaque
  </td>
  <td
    className="col-7"
  >
    <span>
      This Secret is empty
    </span>
  </td>
</tr>
`;
